src/objects/Android_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Google_TA__c</fullName>
        <label>Google TA</label>
        <referenceTo>Google_TA__c</referenceTo>
        <relationshipLabel>Android Submissions</relationshipLabel>
        <relationshipName>Android_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Matching_Builds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Builds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <summaryFilterItems>
            <field>Submission_Error__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Submission_Error__c.Passed_by_other_file__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Submission_Error__c.Android_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Passes__c</fullName>
        <formula>Total_Tests__c - Number_of_Errors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Passes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passed_Waived_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Waived Errors?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Tests__c</fullName>
        <label>Total Tests</label>
        <summaryForeignKey>Submission_Error__c.Android_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Android Submission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>Android Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Android Submissions</pluralLabel>
    <recordTypes>
        <fullName>Fail</fullName>
        <active>true</active>
        <label>Fail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pass</fullName>
        <active>true</active>
        <label>Pass</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>